tests/k8s/deployment_modern.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skydive-test-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: skydive-test-deployment-nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
