tests/k8s/endpoints.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: skydive-test-endpoints
subsets:
  - addresses:
      - ip: 1.2.3.4
    ports:
      - port: 9376
