tests/k8s/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: skydive-test
spec:
  backend:
    serviceName: testsvc
    servicePort: 1080
