tests/k8s/ingress1.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: skydive-test-ingress1
spec:
  defaultBackend:
    service:
      name: skydive-test-ingress1
      port:
        number: 1080
---
kind: Service
apiVersion: v1
metadata:
  name: skydive-test-ingress1
spec:
  ports:
  - protocol: TCP
    port: 1080
    targetPort: 9376
