tests/k8s/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: skydive-test-namespace
  labels:
    name: skydive-test-namespace
