tests/k8s/networkpolicy-egress-allow.yaml
apiVersion: v1
kind: Pod
metadata:
  name: skydive-test-networkpolicy-egress-allow
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: skydive-test-networkpolicy-egress-allow
spec:
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Egress
