tests/k8s/networkpolicy-ingress-allow-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: skydive-test-networkpolicy-ingress-allow-pod-begin
  labels:
    app: skydive-test-networkpolicy-ingress-allow-pod-begin
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: skydive-test-networkpolicy-ingress-allow-pod-end
  labels:
    app: skydive-test-networkpolicy-ingress-allow-pod-end
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: skydive-test-networkpolicy-ingress-allow-pod
spec:
  podSelector:
    matchLabels:
      app: skydive-test-networkpolicy-ingress-allow-pod-begin
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: skydive-test-networkpolicy-ingress-allow-pod-end
