tests/k8s/networkpolicy-ingress-deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: skydive-test-networkpolicy-ingress-deny
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: skydive-test-networkpolicy-ingress-deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
