tests/k8s/networkpolicy-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: skydive-test-networkpolicy-pod
  labels:
    app: skydive-test-networkpolicy-pod
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: skydive-test-networkpolicy-pod
spec:
  podSelector:
    matchLabels:
      app: skydive-test-networkpolicy-pod
  ingress:
  - {}
