tests/k8s/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: default
  name: skydive-test
spec:
  podSelector:
    matchLabels:
      app: skydive-test
  ingress:
  - from:
    - namespaceSelector: {}
