tests/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: skydive-test
spec:
  ports:
  - protocol: TCP
    port: 1080
    targetPort: 9376
