tests/k8s/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: skydive-test-statefulset-nginx
  labels:
    app: skydive-test-statefulset-nginx
spec:
  ports:
  - port: 80
    name: skydive-test-statefulset
  clusterIP: None
  selector:
    app: skydive-test-statefulset-nginx
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: skydive-test-statefulset
spec:
  serviceName: "skydive-test-statefulset-nginx"
  replicas: 2
  selector:
    matchLabels:
      app: skydive-test-statefulset-nginx
  template:
    metadata:
      labels:
        app: skydive-test-statefulset-nginx
    spec:
      containers:
      - name: skydive-test-statefulset-nginx
        image: k8s.gcr.io/nginx-slim:0.8
        ports:
        - containerPort: 80
          name: skydive-test-statefulset-web
        volumeMounts:
        - name: skydive-test-statefulset-www
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: skydive-test-statefulset-www
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
